--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -1,8 +1,10 @@
-<app-top-bar></app-top-bar>
+<a [routerLink]="['/']">
+  <h1>Loja</h1>
+</a>
 
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+<a routerLink="/cart" class="button fancy-button">
+  <i class="material-icons">shopping_cart</i>Carrinho
+</a>
 
 <!-- 
 Copyright Google LLC. All Rights Reserved.
